A bunch of bug fixes
- Hidden scrollbar on homepage
- Fixed room deletion
- Allowed for room deletion from any kind of exit (not just exit button)
- Fixed bug not showing posts with same name
- Abstracted tool select/unselected colour indicator
- Error handling for entering a non-existant room via URL
- Added decoding for room names w/ special chars (a space)
- fixed more roomList removal bugs

--- a/public/Homepage.css
+++ b/public/Homepage.css
@@ -1,6 +1,13 @@
 body {
   font-family: "fira code";
-  background: rgba(15,15,15,255)
+  background: rgba(15,15,15,255);
+  /* This hides the scrollbar for some browsers */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 /* General Button stuff - placed at the top so we can overwrite with classes later eg headerBtn */
